<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_layout_5"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="@+id/guideline11" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/crear_registro"
            android:layout_width="275dp"
            android:layout_height="75dp"
            android:background="@drawable/rounded_button_3"
            android:onClick="createAccount"
            android:text="@string/register"
            android:textColor="@color/light_beige"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/view"
            app:layout_constraintEnd_toStartOf="@+id/guideline6"
            app:layout_constraintStart_toStartOf="@+id/guideline5"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logocm" />

        <EditText
            android:id="@+id/nombres"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/light_coffee"
            android:ems="10"
            android:hint="@string/nombres"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/light_coffee"
            android:textColorHint="@color/light_coffee"
            app:layout_constraintBottom_toTopOf="@+id/crear_registro"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/view"
            app:layout_constraintVertical_bias="0.22" />

        <EditText
            android:id="@+id/apellidos"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/light_coffee"
            android:ems="10"
            android:hint="@string/apellidos"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/light_coffee"
            android:textColorHint="@color/light_coffee"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/nombres" />

        <EditText
            android:id="@+id/correo"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/light_coffee"
            android:ems="10"
            android:hint="@string/new_correo"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/light_coffee"
            android:textColorHint="@color/light_coffee"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/apellidos" />

        <EditText
            android:id="@+id/password_created"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/light_coffee"
            android:ems="10"
            android:hint="@string/crea_constraseña"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/light_coffee"
            android:textColorHint="@color/light_coffee"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/correo" />

        <EditText
            android:id="@+id/password_created_confirmed"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/light_coffee"
            android:ems="10"
            android:hint="@string/repite_constraseña"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/light_coffee"
            android:textColorHint="@color/light_coffee"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toBottomOf="@id/password_created" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_register"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/nombres"
            app:layout_constraintEnd_toEndOf="@id/guideline6"
            app:layout_constraintStart_toStartOf="@id/guideline5"
            app:layout_constraintTop_toTopOf="@id/view"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>