<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".AuthActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_layout_1"
        app:layout_constraintBottom_toTopOf="@+id/guideline1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/pueblosdb_imagen" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:backgroundTint="@color/light_coffee"
            android:drawableEnd="@drawable/ic_user"
            android:drawableTint="@color/light_coffee"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            app:layout_constraintBottom_toTopOf="@+id/password_container"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_container"
            android:layout_width="0dp"
            android:layout_height="58dp"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/light_coffee"
            app:hintTextColor="@color/light_coffee"
            app:layout_constraintBottom_toTopOf="@+id/enter"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_coffee"
                android:hint="@string/contraseña"
                android:inputType="textPassword"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/enter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_1"
            android:onClick="SignIn"
            android:text="@string/enter"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline3"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@+id/password_container" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="10dp"
        android:text="@string/no_cuenta_registar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/register"
        android:layout_width="220dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_button_2"
        android:onClick="SignUp"
        android:text="@string/register"
        android:textColor="@color/light_beige"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>