<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_layout_7">

        <TextView
            android:id="@+id/textView"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_selection"
            android:textAlignment="center"
            android:textColor="@color/light_beige"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/backbeige"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/backbeige"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/rounded_layout_3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSoyMiembro"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_button_3"
            android:onClick="Member"
            android:text="@string/soy_miembro"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/btnNOSoyMiembro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/backbeige" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnNOSoyMiembro"
            android:layout_width="170dp"
            android:layout_height="80dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/rounded_button_3"
            android:onClick="NonMember"
            android:text="@string/no_soy_miembro"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/backbeige"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSoyMiembro" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>