<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    tools:context=".LogInFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/rounded_layout_1"
            app:layout_constraintBottom_toTopOf="@+id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:importantForAccessibility="no"
                app:layout_constraintBottom_toTopOf="@+id/email_container"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/pueblosdb_imagen" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/email_container"
                android:layout_width="0dp"
                android:layout_height="58dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/light_coffee"
                app:boxStrokeColor="@color/light_coffee"
                app:hintTextColor="@color/light_coffee"
                app:cursorColor="@color/light_coffee"
                app:layout_constraintBottom_toTopOf="@+id/password_container"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/imageLogo">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/light_beige"
                    android:hint="@string/email"
                    android:inputType="text"
                    app:boxBackgroundMode="outline"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/password_container"
                android:layout_width="0dp"
                android:layout_height="58dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/light_coffee"
                app:boxStrokeColor="@color/light_coffee"
                app:hintTextColor="@color/light_coffee"
                app:cursorColor="@color/light_coffee"
                app:layout_constraintBottom_toTopOf="@+id/enter"
                app:layout_constraintEnd_toEndOf="@id/guideline3"
                app:layout_constraintStart_toStartOf="@id/guideline2"
                app:layout_constraintTop_toBottomOf="@+id/email_container">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/light_beige"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/enter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button_1"
                android:onClick="signIn"
                android:text="@string/enter"
                android:textColor="@color/dark_blue"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toEndOf="@id/guideline6"
                app:layout_constraintStart_toStartOf="@id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/password_container" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.8" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/alternativos"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintEnd_toStartOf="@+id/guideline3"
                app:layout_constraintStart_toStartOf="@+id/guideline2" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.88" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/facebooksignin"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/facebook"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toEndOf="@+id/googlesignin"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/googlesignin"
                android:layout_width="62dp"
                android:layout_height="62dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/google"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/facebooksignin"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="@+id/guideline4" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_cuenta_registar"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_button_2"
            android:text="@string/register"
            android:textColor="@color/light_beige"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.82" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>